# AscendC-MatMul-Basic

./: CMakeLists.txt  README.md  acl.json  main.cpp  matmul_custom copy.txt  matmul_custom.cpp  matmul_custom.json  matmul_custom.py  matmul_custom_npu  run.sh  verification.py
cmake/npu/: CMakeLists.txt
cmake/tiling/: CMakeLists.txt
mskpp_test/: Instruction_statistic.csv  Pipe_statistic.csv  mskpp_test.py
